[package]
name = "tourust"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.96"
bat = "0.25.0"
clap = { version = "4.5.32", features = ["derive"] }
deranged = "=0.4.0"
flexi_logger = "0.29.8"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
log = "0.4.26"
nvim-rs = { version = "0.9.0", features = ["use_tokio"] }
priority-queue = "2.1.2"
proc-macro2 = { version = "1.0.93", features = ["span-locations"] }
ratatui = "0.29.0"
rust_search = "2.1.0"
socket2 = "0.5.8"
syn = { version = "2.0.98", features = ["full"] }
tokio = "1.44.0"
tokio-stream = { version = "0.1.17", features = ["full"] }
